--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -16,10 +16,14 @@
 <!-- MDB core JavaScript -->
 <script type="text/javascript" src="{{ site.baseurl }}js/mdb.min.js"></script>
 
-
+     <!-- nist-footer CSS - added to make sure the footer log picture is visible 
+	 the file nist-combined.css was downloaded from https://pages.nist.gov/nist-header-footer/css/nist-combined.css on 2020-06-12-->
+    <link href="{{ site.baseurl }}css/nist-combined.css" rel="stylesheet">
+	
 
 <script src="https://pages.nist.gov/nist-header-footer/js/nist-header-footer.js" type="text/javascript"
         defer="defer"></script>
+
 
 
 
