updated path to scripts

--- a/_includes/index.html
+++ b/_includes/index.html
@@ -42,8 +42,15 @@ limitations under the License.
   <title>A Neural Network Calculator for Designing Trojan Detection Algorithms</title>
   
 
+<!--
   <link rel="stylesheet" href="bundle.css" type="text/css">
   <script src="lib.js"></script>
+  -->
+  
+    <!-- bundle CSS -->
+  <link href="{{ site.baseurl }}dist/bundle.css" rel="stylesheet">
+  <!-- NN Calculator lib -->
+  <script type="text/javascript" src="{{ site.baseurl }}dist/lib.js"></script>
 
   <!-- TODO replace with local libraries so that it can run without internet -->
   <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500|Material+Icons" rel="stylesheet" type="text/css">
