--- a/_includes/index.html
+++ b/_includes/index.html
@@ -559,9 +559,15 @@ limitations under the License.
 
   -->
   
+    <!-- Google analytics -->
+  <!--
   <script src="bundle.js"></script>
-  <!-- Google analytics -->
   <script src="analytics.js"></script>
+  -->
+  	<!-- bundle JS -->
+	<script type="text/javascript" src="{{ site.baseurl }}dist/bundle.js"></script>
+	<!-- analytics JavaScript -->
+	<script type="text/javascript" src="{{ site.baseurl }}dist/analytics.js"></script>
 
 </body>
 </html>
